--- a/index.html
+++ b/index.html
@@ -1,16 +1,99 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+
+  <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="container">
+    <header>
+      <nav>
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <img src="img/logo.png" alt="Header logo" class="logo">
+    </header>
+  </div>
+  <section class="hero">
+    <section class="hero-text">
+      <div class="header">
+        <h1>Innovation<br> On<br> Demand</h1>
+        <button class="btn">
+          Get Started
+        </button>
+      </div>
+    </section>
+    <section class="hero-image">
+      <div class="image">
+        <img src="img/header-img.png" alt="Header image">
+      </div>
+    </section>
+  </section>
+
+  <hr class="break">
+
+  <section class="section-first">
+    <section class="section-features">
+      <h3>Features</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="section-about">
+      <h3>About</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+  </section>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section class="section-second">
+    <section class="section-services">
+      <h3>Services</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="section-product">
+      <h3>Product</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="section-vision">
+      <h3>Vision</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+  </section>
+
+  <hr class="break">
+
+  <section class="section-contact">
+    <h3>Contact</h3>
+    <p>123 Way 456 Street</p>
+    <p>Somewhere, USA</p><br>
+    <p>1 (888) 888-8888</p><br>
+    <p>sales@greatidea.io</p>
+  </section>
+  <footer>
+    Copyright Great Idea 2018
+  </footer>
 </body>
+
 </html>
