add tablet view

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -40,12 +40,13 @@
     </section>
     <section class="hero-image">
       <div class="image">
-        <img src="img/header-img.png" alt="Header image">
+        <img src="img/header-img.png" alt="Header image" class="header-image">
       </div>
     </section>
   </section>
 
   <hr class="break">
+
 
   <section class="section-first">
     <section class="section-features">
@@ -81,6 +82,7 @@
         Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </section>
   </section>
+
 
   <hr class="break">
 
